Updated style guide.

--- a/_includes/neighborhoods-list.html
+++ b/_includes/neighborhoods-list.html
@@ -3,43 +3,43 @@
 <hr />
 
 <ul class="neighborhoods-list">
-  <li><a href="#">Albany Park</a></li>
-  <li><a href="#">Andersonville</a></li>
-  <li><a href="#">Avondale</a></li>
-  <li><a href="#">Bridgeport</a></li>
-  <li><a href="#">Bucktown</a></li>
-  <li><a href="#">Edgewater</a></li>
-  <li><a href="#">Edison Park</a></li>
-  <li><a href="#">Gold Coast</a></li>
-  <li><a href="#">Humboldt Park</a></li>
-  <li><a href="#">Irving Park</a></li>
-  <li><a href="#">Jefferson Park</a></li>
-  <li><a href="#">Lakeview</a></li>
-  <li><a href="#">Lincoln Park</a></li>
-  <li><a href="#">Lincoln Square</a></li>
-  <li><a href="#">Logan Square</a></li>
-  <li><a href="#">Loop</a></li>
-  <li><a href="#">Mayfair</a></li>
-  <li><a href="#">Millenium Park</a></li>
-  <li><a href="#">Near North Side</a></li>
-  <li><a href="#">Near South Side</a></li>
-  <li><a href="#">Near West Side</a></li>
-  <li><a href="#">Noble Square</a></li>
-  <li><a href="#">North Center</a></li>
-  <li><a href="#">Norwood Park</a></li>
-  <li><a href="#">Old Town</a></li>
-  <li><a href="#">Pilsen</a></li>
-  <li><a href="#">Printers Row</a></li>
-  <li><a href="#">River North</a></li>
-  <li><a href="#">Rogers Park</a></li>
-  <li><a href="#">Roscoe Village</a></li>
-  <li><a href="#">South Loop</a></li>
-  <li><a href="#">Streeterville</a></li>
-  <li><a href="#">Ukrainian Village</a></li>
-  <li><a href="#">University Village</a></li>
-  <li><a href="#">Uptown</a></li>
-  <li><a href="#">West Loop</a></li>
-  <li><a href="#">West Rogers Park</a></li>
-  <li><a href="#">Wicker Park</a></li>
-  <li><a href="#">Wrigleyville</a></li> 
+  <li class="neighborhoods-list__item"><a href="#">Albany Park</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Andersonville</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Avondale</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Bridgeport</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Bucktown</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Edgewater</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Edison Park</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Gold Coast</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Humboldt Park</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Irving Park</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Jefferson Park</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Lakeview</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Lincoln Park</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Lincoln Square</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Logan Square</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Loop</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Mayfair</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Millenium Park</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Near North Side</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Near South Side</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Near West Side</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Noble Square</a></li>
+  <li class="neighborhoods-list__item"><a href="#">North Center</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Norwood Park</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Old Town</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Pilsen</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Printers Row</a></li>
+  <li class="neighborhoods-list__item"><a href="#">River North</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Rogers Park</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Roscoe Village</a></li>
+  <li class="neighborhoods-list__item"><a href="#">South Loop</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Streeterville</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Ukrainian Village</a></li>
+  <li class="neighborhoods-list__item"><a href="#">University Village</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Uptown</a></li>
+  <li class="neighborhoods-list__item"><a href="#">West Loop</a></li>
+  <li class="neighborhoods-list__item"><a href="#">West Rogers Park</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Wicker Park</a></li>
+  <li class="neighborhoods-list__item"><a href="#">Wrigleyville</a></li> 
 </ul>
