--- a/_includes/rollup--b.html
+++ b/_includes/rollup--b.html
@@ -1,4 +1,5 @@
 <article class="rollup">
+  <div class="rollup-pin"></div>
   <h1 class="rollup-title"><a href="#">The Abbey Pub</a></h1>
   <p class="rollup-address">
     3420 W Grace St,
