--- a/_includes/rollup--c.html
+++ b/_includes/rollup--c.html
@@ -1,4 +1,5 @@
 <article class="rollup">
+  <div class="rollup-pin"></div>
   <h1 class="rollup-title"><a href="#">The Lion Head Pub</a></h1>
   <p class="rollup-address">
     2251 N Lincoln Ave,
