--- a/assets/sass/_mixins.scss
+++ b/assets/sass/_mixins.scss
@@ -34,6 +34,9 @@
 /* Use Sentinel ScreenSmart */
 %sentinel { font-family: $sentinel-ssm; }
 
+/* Use Helvetica Neue font stack */
+%helvetica { font-family: $helvetica; }
+
 /* Tight tracking */
 %track-in { letter-spacing: -0.03em; }
 
