Updated site-header.html + .scss. Kind of have a header design now.

--- a/assets/sass/_init.scss
+++ b/assets/sass/_init.scss
@@ -87,6 +87,7 @@ $georgia: Georgia, "Times New Roman", "DejaVu Serif", serif;
 $helvetica: "Helvetica Neue", Helvetica, Arial, "Nimbus Sans L", sans-serif;
 $sentinel-ssm: 'Sentinel SSm A', 'Sentinel SSm B', $georgia;
 $sentinel: 'Sentinel A', 'Sentinel B', $georgia;
+$champion-heavyweight: 'Champion Heavywt A', 'Champion Heavywt B', $helvetica;
 $champion-welterweight: 'Champion Welterwt A', 'Champion Welterwt B', $helvetica;
 $champion-lightweight: 'Champion Lightwt A', 'Champion Lightwt B', $helvetica;
 $gotham-ssm: 'Gotham SSm A', 'Gotham SSm B', $helvetica;
@@ -104,6 +105,11 @@ $font-monospace:   $monospace;
 $wingsauce: #e35125;
 $ipa: $wingsauce;
 $pilsner: #fdbb11;
+$weber: #2E3E36;
+$weber-75: #8AA29E;
+$weber-50: #CAD2D1;
+$weber-25: #ECF1F1;
+
 $stout: #1e140c;
 $stout-80: tint( $stout, 20% );
 $stout-60: tint( $stout, 40% );
