Commit, before drastic redesign!

--- a/_includes/finder.html
+++ b/_includes/finder.html
@@ -70,7 +70,7 @@
 </div>
 
 <div class="finder__column--button">
-  <button class="finder__button" type="submit">Browse</button>
+  <button class="finder__button" type="submit">Search </button>
 </div>
 
 </form>
