--- a/assets/sass/components/_contact-list.scss
+++ b/assets/sass/components/_contact-list.scss
@@ -9,7 +9,7 @@
   li {
     @include adjust-font-size-to($label, 1.5);
     padding-top: rhythm(1, $label);   
-    border-top: 1px solid $mushroom;
+    border-top: 1px solid $weber-50;
     margin-bottom: rhythm(1, $label);
   }
 }
