--- a/assets/sass/components/_rollup.scss
+++ b/assets/sass/components/_rollup.scss
@@ -10,6 +10,7 @@
 
 .rollup {
   background-color: $white;
+  border: 1px solid $off-white;
   margin-bottom: $zen-gutter-width / 2;  
 }
 .rollup-title {
@@ -27,6 +28,7 @@
   @extend %allcaps;  
   @include adjust-font-size-to($crumb, 1);
   @include trailer(0, $crumb);
+  color: $gray-medium;
   padding-left: rhythm(4, $crumb); 
   padding-right: rhythm(1, $crumb);    
   padding-bottom: rhythm(1.5, $crumb);  
@@ -50,6 +52,7 @@
   list-style-type: none;
   padding-left: 0;
   @include adjust-font-size-to($label, 1.5);
+  margin-bottom: 0; // important
 
   li {
     border-top: 1px solid $off-white;
@@ -77,7 +80,7 @@
     text-decoration: underline;  
   }
 }
-.rollup-list__drink { background: url('../img/icon__drink.svg'); }
+.rollup-list__drink { background-image: url('../img/icon__drink.svg'); }
 .rollup-list__food { background-image: url('../img/icon__food.svg'); }
 .rollup-list__category { background-image: url('../img/icon__tag.svg'); }
 .rollup-list__drink,
