--- a/assets/sass/components/_updated-list.scss
+++ b/assets/sass/components/_updated-list.scss
@@ -18,7 +18,7 @@
   list-style-type: none;
   padding-left: 0;
   li {
-    border-top: 1px solid $mushroom;
+    border-top: 1px solid $weber-50;
     margin-bottom: rhythm(1);
   }
 }
