--- a/assets/sass/_init.scss
+++ b/assets/sass/_init.scss
@@ -88,7 +88,6 @@ $helvetica: "Helvetica Neue", Helvetica, Arial, "Nimbus Sans L", sans-serif;
 $sentinel-ssm: 'Sentinel SSm A', 'Sentinel SSm B', $georgia;
 $sentinel: 'Sentinel A', 'Sentinel B', $georgia;
 $champion-heavyweight: 'Champion Heavywt A', 'Champion Heavywt B', $helvetica;
-$champion-welterweight: 'Champion Welterwt A', 'Champion Welterwt B', $helvetica;
 $champion-lightweight: 'Champion Lightwt A', 'Champion Lightwt B', $helvetica;
 $gotham-ssm: 'Gotham SSm A', 'Gotham SSm B', $helvetica;
 
@@ -97,18 +96,18 @@ $gotham-ssm: 'Gotham SSm A', 'Gotham SSm B', $helvetica;
 $monospace: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;;
 
 // Now create some variables for the font stacks we want to use on this site.
-$base-font-family: $sentinel-ssm; // The font family set on the html element.
+$base-font-family: $helvetica; // The font family set on the html element.
 $font-monospace:   $monospace;
 
 // Sass color variables, etc.
 
 $wingsauce: #e35125;
 $ipa: $wingsauce;
-$pilsner: #fdbb11;
+$pilsner: #f5ad00;
 $weber: #2E3E36;
 $weber-75: #8AA29E;
 $weber-50: #CAD2D1;
-$weber-25: #ECF1F1;
+$weber-25: #f5f8f7;
 
 $stout: #1e140c;
 $stout-80: tint( $stout, 20% );
@@ -117,14 +116,14 @@ $stout-40: tint( $stout, 60% );
 $stout-20: tint( $stout, 80% );
 $stout-05: tint( $stout, 95% );
 
-$link-color: $ipa;
-$hover-color: $stout;
+$link-color: $wingsauce;
+$hover-color: darken($wingsauce, 10%);
 
-$black: $stout-80;
-$gray-medium: $stout-60;
-$gray-light: $stout-40;
-$mushroom: $stout-20;
-$off-white: $stout-05;
+$black: $weber;
+$gray-medium: $weber-75;
+$gray-light: $weber-50;
+
+$off-white: $weber-25;
 $white: #ffffff;
 $white-60: rgba($white, .60);
 $white-30: rgba($white, .30);
