--- a/assets/sass/components/_neighborhoods-list.scss
+++ b/assets/sass/components/_neighborhoods-list.scss
@@ -22,7 +22,8 @@
 .neighborhoods-list__heading {
   color: $pilsner;
   @extend %allcaps;
-  @include trailer(.5, $xxl-heading);
+  @include adjust-font-size-to($lg-heading, 3);
+  @include trailer(0, $lg-heading);  
 }
 .neighborhoods-list__subheading {
   @include adjust-font-size-to($lg-heading, 2.5);  
