Updated Home page and link colors.

--- a/_includes/neighborhoods-list.html
+++ b/_includes/neighborhoods-list.html
@@ -1,6 +1,5 @@
-<h1 class="neighborhoods-list__heading">Explore & Save</h1>
+<h1 class="neighborhoods-list__heading">Explore + Save</h1>
 <h2 class="neighborhoods-list__subheading">We’ve cataloged over 420 bars across Chicago.</h2>
-<hr />
 
 <ul class="neighborhoods-list">
   <li class="neighborhoods-list__item"><a href="#">Albany Park</a></li>
