--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -1,13 +1,15 @@
 <article class="feature rollup">
-  <p class="feature__dotw">Today's Featured Special:</p>
-  <h1 class="feature__title"><a href="#">Finley Dunne’s Tavern</a></h1>
-  <p class="feature__address">
-    2657 N Kedzie Ave,
-    <a href="#">Logan Square</a>
-  </p>
-  <ul class="feature-list">
-    <li class="feature-list__drink">$7 Domestic Pitchers, $3 Miller Lite Bottles, $4 Four Rebels Lion Bombs</li>
-    <li class="feature-list__food">$7.99 12oz New York Strip Steak Dinner, $3.50 Half Pound Black Angus Burger, $4.50 Deluxe Burger w/ Cheese & Fries</li>
-    <li class="feature-list__category"><a href="#">Sports Bar</a>, <a href="#">Night Club</a></li>      
-  </ul>
+  <div class="feature__image">
+  </div>
+
+  <div class="feature__content">
+    <p class="feature__dotw">Featured Special:</p>
+    <h1 class="feature__title"><a href="#">Finley Dunne’s Tavern</a></h1>
+    <p class="feature__address">3458 N Lincoln Ave., <a href="#">Lakeview</a></p>
+    <ul class="feature-list">
+      <li class="feature-list__drink">$4 Beer of the Month, $7 Lucifer Belgian Ale Tallboys</li>
+      <li class="feature-list__food">$5 Ryan Burgers</li>
+      <li class="feature-list__category"><a href="#">Sports Bar</a></li>      
+    </ul>
+  </div>  
 </article>
