Adjusted type sizing.

--- a/assets/sass/components/_finder.scss
+++ b/assets/sass/components/_finder.scss
@@ -45,11 +45,16 @@
   @extend %champion-heavyweight;
   @extend %allcaps; 
   color: $pilsner;
-  @include adjust-font-size-to($lg-heading, 2.5);   
-  @include trailer(1, $lg-heading);
-  padding-bottom: rhythm(1.25, $lg-heading);
+  @include adjust-font-size-to($sm-heading, 2.5);   
+  @include trailer(1, $sm-heading);
+  padding-bottom: rhythm(1.25, $sm-heading);
   border-bottom: 1px solid $stout-80;
   &.reverse-border { border-bottom: 1px solid $stout-10; }
+  @include breakpoint($bp1) {
+    @include adjust-font-size-to($lg-heading, 2.5);   
+    @include trailer(1, $lg-heading);
+    padding-bottom: rhythm(1.25, $lg-heading);
+  }
 }
 .finder__subheading {
   @extend %sentinel-display;
@@ -69,7 +74,7 @@
 .finder__label-wrapper {
   display: table-cell;
   text-align: center;
-  width: 60px;
+  width: 50px;
   @include breakpoint($bp2) {
     width: 66px;
   }  
