--- a/assets/sass/components/_neighborhoods-list.scss
+++ b/assets/sass/components/_neighborhoods-list.scss
@@ -23,10 +23,15 @@
   @extend %champion-heavyweight;
   @extend %allcaps; 
   color: $pilsner;
-  @include adjust-font-size-to($lg-heading, 2);   
-  @include trailer(1, $lg-heading);
-  padding-bottom: rhythm(1.5, $lg-heading);
+  @include adjust-font-size-to($sm-heading, 2.5);   
+  @include trailer(1, $sm-heading);
+  padding-bottom: rhythm(1.25, $sm-heading);
   border-bottom: 1px solid $stout-10; 
+  @include breakpoint($bp1) {
+    @include adjust-font-size-to($lg-heading, 2.5);   
+    @include trailer(1, $lg-heading);
+    padding-bottom: rhythm(1.25, $lg-heading);
+  }
 }
 .neighborhoods-list__subheading {
   @extend %sentinel-display;
