--- a/assets/sass/components/_dotw-list.scss
+++ b/assets/sass/components/_dotw-list.scss
@@ -4,15 +4,15 @@
  */
 
 .dotw-title {
-  @extend %sentinel-display;
-  font-weight: 700;
-  @include adjust-font-size-to($sm-heading, 1.5);
-  @include leader(0, $sm-heading);
-  @include trailer(.5, $sm-heading);
-  padding-top: rhythm(1.5, $sm-heading);
-  padding-right: rhythm(1, $sm-heading);  
-  margin-bottom: rhythm(1.5, $sm-heading);
-  padding-left: rhythm(1.5, $sm-heading);
+  @extend %champion-heavyweight;
+  color: $stout-20;
+  @include adjust-font-size-to($text, 2);
+  @include leader(0, $text);
+  @include trailer(.5, $text);
+  padding-top: rhythm(1.5, $text);
+  padding-right: rhythm(1, $text);  
+  margin-bottom: rhythm(1.25, $text);
+  padding-left: rhythm(1.5, $text);
 }
 .dotw-list { @extend %rollup-list; }
 .dotw-list__drink { background: url('../img/icon__drink.svg'); }
