--- a/assets/sass/layouts/_l-page.scss
+++ b/assets/sass/layouts/_l-page.scss
@@ -23,6 +23,6 @@
 }
 
 .l-stripe {
-  padding-top: 3em;
-  padding-bottom: 3em;
+  padding-top: $zen-gutter-width;
+  padding-bottom: $zen-gutter-width;
 }
