--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,6 +1,6 @@
 <footer class="site-footer">
   <div class="container">
-    <div class="l-66-33--1">
+    <div class="l-1up">
       <div class="site-footer__logo">
         <img src="{{ site.baseurl }}/assets/img/smalltabs-logo__footer.svg" />
       </div>
@@ -9,17 +9,12 @@
           By using this website, you agree to our <a href="#">terms of use</a>.
         </p>
       </div>
-    </div>
 
-    <div class="l-66-33--2">
-      <ul class="site-footer__social-links">
-        <li class="site-footer__social-links-twitter">
-          <a href="#"><i class="ss-icon">twitter</i></a>
-        </li>
-        <li class="site-footer__social-links-facebook">
-          <a href="#"><i class="ss-icon">facebook</i></a>
-        </li>
-      </ul>
+      <nav class="site-footer__social-links">
+        <a href="#"><i class="ss-icon">twitter</i></a>
+        <a href="#"><i class="ss-icon">facebook</i></a>
+      </nav>
+
     </div>
   </div>
 </footer>
