--- a/assets/sass/components/_updated-list.scss
+++ b/assets/sass/components/_updated-list.scss
@@ -18,20 +18,18 @@
   list-style-type: none;
   padding-left: 0;
   li {
-    border-top: 1px solid $weber-50;
+    border-top: 1px solid $stout-10;
     margin-bottom: rhythm(1);
   }
 }
 .block-list__item-title {
-  @include adjust-font-size-to($sm-heading, 1.5);
-  @include leader(1, $sm-heading);
-  @include trailer(.5, $sm-heading); 
-  //@include adjust-font-size-to($md-heading, 2.5);
-  //@include leader(1, $md-heading);
-  //@include trailer(.25, $md-heading);
+  @include adjust-font-size-to($text, 1.5);
+  @include leader(1, $text);
+  @include trailer(.5, $text); 
 }
 .block-list__item-address {
+  @extend %helvetica;
   text-transform: uppercase;
   @include adjust-font-size-to($crumb, 1);
-  color: $gray-medium;
+  color: $stout-60;
 }
